Fix horisontal scrollbar in code blocks
Probably not yet ideal.

--- a/less/_base.less
+++ b/less/_base.less
@@ -1309,6 +1309,7 @@ html.work-mode {
   pre {
     margin: 0;
     padding-left: 3px;
+    white-space: pre-wrap;
     border-left: 3px solid hsl(275, 15%, 40%);
   }
 
